--- a/ERMaterialConvertTool/ERMaterialConvertTool.csproj
+++ b/ERMaterialConvertTool/ERMaterialConvertTool.csproj
@@ -29,6 +29,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Microsoft.NET.ILLink.Tasks" Version="9.0.6" />
       <PackageReference Include="NativeFileDialogSharp" Version="0.6.0-alpha" />
       <PackageReference Include="PromptPlus" Version="4.2.0" />
     </ItemGroup>
